# pylibheif

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  GEMINI.md  LICENSE  README.md  clang_tidy_report.txt  pyproject.toml  pytest.ini
.github/workflows/: build.yml
pylibheif/: __init__.py
src/: common.hpp  context.cpp  context.hpp  encoder.cpp  encoder.hpp  image.cpp  image.hpp  main.cpp
tests/: compare_encoders.py  find_matching_quality.py  test_async.py  test_benchmark.py  test_metadata_cross_validation.py  test_pylibheif.py  test_threading_benchmark.py
triplets/: x64-windows-static-md.cmake
