[build-system]
requires = ["scikit-build-core>=0.10.0", "pybind11>=2.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pylibheif"
version = "1.21.2.post8"
description = "Python bindings for libheif - HEIC/AVIF/JPEG2000 image codec"
readme = "README.md"
license = {text = "LGPL-3.0-or-later"}
requires-python = ">=3.11"
authors = [
    {name = "Curry Tang", email = "twn39@163.com"}
]
keywords = ["heif", "heic", "avif", "jpeg2000", "image", "codec", "libheif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
]
dependencies = [
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/twn39/pylibheif"
Repository = "https://github.com/twn39/pylibheif"
Documentation = "https://github.com/twn39/pylibheif#readme"
Issues = "https://github.com/twn39/pylibheif/issues"


[tool.scikit-build]
cmake.version = ">=3.15"
ninja.version = ">=1.10"
wheel.expand-macos-universal-tags = true

[tool.scikit-build.cmake.define]
WITH_EXAMPLES = "OFF"
WITH_RAV1E = "OFF"
WITH_DAV1D = "ON"
WITH_SvtEnc = "OFF"
WITH_AOM = "ON"
WITH_X265 = "ON"
WITH_KVAZAAR = "ON"
WITH_LIBDE265 = "ON"
WITH_OpenJPEG_ENCODER = "ON"
WITH_OpenJPEG_DECODER = "ON"
WITH_JPEG_ENCODER = "ON"
WITH_JPEG_DECODER = "ON"
WITH_X264 = "OFF"
WITH_OpenH264_DECODER = "OFF"
WITH_FFMPEG_DECODER = "OFF"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-benchmark>=5.0.0",
    "pillow-heif>=0.20.0",
    "meson>=1.10.1",
    "ninja>=1.13.0",
]
